@@ -47,4 +47,4 @@ T 0 0 Origin
 
 $color magenta3
 $text_size 20
-T 5 10 Another origin
+T 5 10 Another origin. 
